k8s/app/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  selector:
    app: nginx-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
