k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
